main 배포